# sciencebeam-trainer-delft

./: .dockerignore  .env  .gitignore  .pylintrc  Dockerfile  Dockerfile.grobid  Dockerfile.jupyter  Dockerfile.trainer-grobid  Jenkinsfile  Jenkinsfile.update-grobid-and-trainer  MANIFEST.in  Makefile  README.md  docker-bake.hcl  docker-compose.override.yml  docker-compose.yml  gcloud-ai-platform-submit.sh  pyproject.toml  pytest.ini  requirements.build.txt  requirements.cpu.txt  requirements.delft.txt  requirements.dev.txt  requirements.jep.txt  requirements.notebook.txt  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: github-actions-ci.yml
config/: embedding-registry.json
docker/: entrypoint.sh
notebooks/: test.ipynb  train-header.ipynb
sciencebeam_trainer_delft/: callbacks.py  cloud_support.py  config.py  data.py  data_generator.py  download_manager.py  embedding_manager.py  grobid_trainer.py  logging.py  models.py  no_warn_if_disabled.py  preprocess.py  saving.py  tagger.py  trainer.py  utils.py  wrapper.py
sciencebeam_trainer_delft/embedding/: __init__.py  __main__.py  cli.py  embedding.py  manager.py
sciencebeam_trainer_delft/grobid/: __init__.py  lmdb_argv_workaround.py
sciencebeam_trainer_delft/sequence_labelling/: __init__.py  callbacks.py  config.py  data_generator.py  debug.py  evaluation.py  (+13 more)
tests/: conftest.py  data_generator_test.py  data_test.py  download_manager_test.py  embedding_manager_test.py  grobid_trainer_test.py  models_test.py  preprocess_test.py  reader_test.py  test_utils.py  utils_test.py  wrapper_test.py
(+93 files in other folders)
