[project]
name = "sciencebeam-trainer-delft"
version = "0.0.0"
description = "ScienceBeam Trainer DeLFT"
readme = "README.md"
requires-python = ">=3.9.17"
dependencies = [
    "jsonpickle>=1.4.1",
]

[project.optional-dependencies]
tf = [
    "tensorflow==2.9.3",
]
delft = [
    "blingfire==0.1.8",
    "delft==0.3.4",
]

[dependency-groups]
dev = [
    "flake8==4.0.1",
    "mypy==0.910",
    "pylint==2.8.3",
    "pytest==6.2.5",
    "pytest-watch==4.2.0",
    "types-pyyaml==6.0.12.20250915",
    "types-requests==2.27.5",
    "types-six==1.16.9",
]

[tool.setuptools.packages.find]
include = ["sciencebeam_trainer_delft"]
